--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@ a {
 }
 
 .slide-1 {
-    background-image: url(/img/slider-home-bg1.jpg);
+    background-image: url(../img/slider-home-bg1.jpg);
     background-repeat: no-repeat;
     background-position: center right;
     background-size: 40% 100%;
@@ -262,7 +262,7 @@ a {
     display: flex;
     height: 100vh;
     margin-left: 140px;
-    background-image: url(/img/333.png);
+    background-image: url(../img/333.png);
     background-repeat: no-repeat;
     background-position: center right;
     background-size: 40% 100%;
@@ -303,7 +303,7 @@ a {
 }
 
 .services {
-    background-image: url(/img/services-bg.jpg);
+    background-image: url(../img/services-bg.jpg);
     background-position: right center;
     background-repeat: no-repeat;
     background-size: 40% 100%;
@@ -311,7 +311,7 @@ a {
 }
 
 .portfolio {
-    background-image: url(/img/Group\ 36.jpg);
+    background-image: url(../img/Group\ 36.jpg);
     background-position: right center;
     background-repeat: no-repeat;
     background-size: 40% 100%;
@@ -412,7 +412,7 @@ a {
     background-position: center right;
     justify-content: space-between;
     align-items: center;
-    background-image: url(/img/contacts-bg.jpg);
+    background-image: url(../img/contacts-bg.jpg);
     background-size: 40% 100%;
     flex-wrap: wrap;
 }
