--- a/styles/style.css
+++ b/styles/style.css
@@ -403,9 +403,10 @@ a {
     flex-wrap: wrap;
     padding: 15px;
     margin: 15px;
-    flex: 1 1 30%;
+    flex: 0 1 30%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    min-height: 65vh;
 }
 
 .portfolio__image, .services__image {
@@ -423,14 +424,29 @@ a {
     height: 150px;
 }
 
+.services__info, .portfolio__info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    flex-grow: 1;
+}
+
 .portfolio__title, .services__title {
     padding: 15px 0;
     text-align: center;
 }
 
+.services__sale{
+    color: #4C536A;
+    font-weight: 500;
+    padding: 0px 15px 15px 15px;
+} 
+
 .portfolio__text, .services__text {
     color: #A2A2A2;
     padding-bottom: 15px;
+    text-align: center;
 }
 
 .portfolio__btn {
